# strathub

./: .gitignore  README.md  env.yaml  package-lock.json  package.json  run.py
.github/workflows/: ci.yml  release.yml
config/: strathub.yaml.example
config/strategies/: arb_example.yaml
core/: config.py  engine_loop.py  event_bus.py  strategy_event_logger.py  strategy_loader.py
core/backtest/: replayer.py
core/control/: command_handler.py  ws_server.py
core/data/: kalshi_client.py  live_snapshot_builder.py  odds_api_client.py
core/execution/: simulator.py
core/models/: events.py  snapshots.py
core/sinks/: file_sink.py  multicast_sink.py  snapshot_recorder.py  websocket_sink.py
data/backtests/: example.ndjson
data/historical/: election_odds_2024.csv  polymarket_fed_cut_2024.csv
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/engine/: engine.rs  feeds.rs  mod.rs  models.rs  optimizer.rs  py_bridge.rs  simulator.rs  storage.rs  webhooks.rs
strategies/: arb_example.params.json  arb_example.py  base.py  base_strategy.py  kalshi_elections_arb.params.json  kalshi_elections_arb.py  polymarket_nfl_arb.params.json  polymarket_nfl_arb.py  prediction_arb.params.json  prediction_arb.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  config.ts  main.tsx
ui/src/api/: engine.ts
ui/src/components/backtests/: BacktestPanel.tsx
ui/src/hooks/: useEngineStream.ts
ui/src/lib/: export.ts  httpClient.ts  prefs.ts
ui/src/state/: engineStore.ts
ui/src/types/: engine.ts
(+18 files in other folders)
