[package]
name = "strathub_app"
version = "2.0.0-alpha.1"
description = "StratHub 2.0 Trading Engine & Desktop App"
authors = ["StratHub Team"]
edition = "2021"
default-run = "strathub_app"

[lib]
name = "strathub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "strathub-cli"
path = "src/cli.rs"

[[bin]]
name = "strathub_app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
flate2 = "1.0"
tokio = { version = "1.38", features = ["full"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.22", features = ["auto-initialize"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
